--- a/web/visualizers.css
+++ b/web/visualizers.css
@@ -45,6 +45,7 @@
 .visualizer-panels {
     position: relative;
     height: 200px;
+    min-height: 200px;
 }
 
 .viz-panel {
